<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.azul</groupId>
    <artifactId>azul2022-azul-a</artifactId>
    <version>1.0-SNAPSHOT</version>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.9.0</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>4.8.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <sourceDirectory>src/main/java</sourceDirectory>
        <testSourceDirectory>src/test/java</testSourceDirectory>

        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M7</version>
            </plugin>

            <!-- la génération de la javadoc s'utilise avec "mvn site".-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.4.1</version>

                <configuration>
                    <show>package</show>
                    <nohelp>true</nohelp>
                    <encoding>utf-8</encoding> <!-- éventuellement à changer : encodage de vos fichiers -->
                    <charset>utf-8</charset> <!-- éventuellement à changer : encodage de vos fichiers -->
                    <docencoding>utf-8</docencoding>
                </configuration>

                <executions>
                    <execution>
                        <id>javadoc</id>
                        <goals>
                            <goal>javadoc</goal>
                        </goals>
                        <phase>site</phase>
                        <configuration>
                            <!-- <overview>${basedir}/src/main/java/Main421/overview.html</overview> --><!-- à changer : selon que vous avez des descriptions du projet et des packages -->
                            <!-- endroit où seront les fichiers html générés ! attention au .gitignore ! -->
                            <!-- ici, c'est dans src/main/apidocs -->
                            <outputDirectory>${basedir}/src/main/</outputDirectory>
                            <reportOutputDirectory>${basedir}/src/main/</reportOutputDirectory>
                        </configuration>
                    </execution>

                    <execution>
                        <id>test-javadoc</id>
                        <goals>
                            <goal>test-javadoc</goal>
                        </goals>
                        <phase>site</phase>
                        <configuration>
                            <!-- endroit où seront les fichiers html générés ! attention au .gitignore ! -->
                            <!-- ici, c'est dans src/test/apidocs -->
                            <reportOutputDirectory>${basedir}/src/test/</reportOutputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.1.0</version> <!-- à ne pas changer : c'est la version du plugin (et pas de java) -->
                <executions>
                    <execution>
                        <goals>
                            <goal>java</goal>
                        </goals>
                    </execution>

                    <execution>
                        <id>une</id>
                        <goals>
                            <goal>java</goal>
                        </goals>
                        <configuration>
                            <mainClass>org.azul.Main</mainClass>
                            <arguments>
                                <argument>1</argument>
                                <argument>3</argument>
                                <argument>1</argument>
                            </arguments>
                        </configuration>
                    </execution>

                    <execution>
                        <id>cinqcents</id>
                        <goals>
                            <goal>java</goal>
                        </goals>
                        <configuration>
                            <mainClass>org.azul.Main</mainClass>
                            <arguments>
                                <argument>500</argument>
                                <argument>3</argument>
                                <argument>1</argument>
                            </arguments>
                        </configuration>
                    </execution>

                    <execution>
                        <id>murGris</id>
                        <goals>
                            <goal>java</goal>
                        </goals>
                        <configuration>
                            <mainClass>org.azul.Main</mainClass>
                            <arguments>
                                <argument>1</argument>
                                <argument>3</argument>
                                <argument>2</argument>
                            </arguments>
                        </configuration>
                    </execution>

                    <execution>
                        <id>murX2</id>
                        <goals>
                            <goal>java</goal>
                        </goals>
                        <configuration>
                            <mainClass>org.azul.Main</mainClass>
                            <arguments>
                                <argument>1</argument>
                                <argument>3</argument>
                                <argument>3</argument>
                            </arguments>
                        </configuration>
                    </execution>

                    <execution>
                        <id>murCentre</id>
                        <goals>
                            <goal>java</goal>
                        </goals>
                        <configuration>
                            <mainClass>org.azul.Main</mainClass>
                            <arguments>
                                <argument>1</argument>
                                <argument>3</argument>
                                <argument>4</argument>
                            </arguments>
                        </configuration>
                    </execution>

                </executions>
                <configuration>
                    <mainClass>org.azul.Main</mainClass>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.sonarsource.scanner.maven</groupId>
                <artifactId>sonar-maven-plugin</artifactId>
                <version>3.9.1.2184</version>
            </plugin>

            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.8</version>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

</project>
